# projet-usb

./: .gitignore  .~lock.todo.odt#  Cargo.toml  README.md  docker-compose.yml  generate-certificate.sh  todo.odt  webhook.crt  webhook.key
agent/: Cargo.toml  agent.crt  agent.csr  agent.key  ca.crt
agent/src/: device_manager.rs  filesystem.rs  main.rs  mount.rs  udev_monitor.rs  websocket.rs
backend/: Cargo.toml  backend.crt  backend.csr  backend.key  ca.crt  ca.key  ca.srl
backend/src/: audit.rs  expose_s3.rs  main.rs  websocket.rs
minio-certs/: webhook.crt  webhook.key
minio-data/.minio.sys/: format.json
minio-data/.minio.sys/tmp/.trash/14eae636-79fd-417e-90ef-5517bc77e98d/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/1a5ce12c-476e-44f3-aceb-0d66d47da267/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/203dbe96-f305-48ab-8632-17142bf1f483/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/218c9cfb-5396-4b77-abb5-3ec36318d2bf/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/29561eca-803c-47c1-b247-086de9b1805c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/3bf70dff-b641-4552-83c4-01f457c261e4/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/4fe95701-e5f9-48ad-99a4-d6dce981246d/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/5823cb9e-afd1-4471-87b8-850e6df3664e/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/5de71bd6-69c6-4cab-bf01-9fc11378be3c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/6d924401-f2a1-46cc-ac87-c6f628eb28f6/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/7addc6aa-69a4-45d9-bb6d-1daf3d2c1b51/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/841324b0-a8bd-4f2d-abec-83d6a5daf7fe/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/93100226-acea-4977-9af4-9c5eafc2d5b5/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/93add1bd-9d24-40e6-a6d3-b3ff608f62fe/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/97f15f93-d42d-4770-8a0d-88a89aa402b8/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/ba9051bd-e991-474e-87fb-24cd9baada23/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/bcf03015-ff53-41a4-b486-af3f495ee018/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/d9cfeb16-dfb7-4bb0-816d-a20fa105616a/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/e59c381b-e71b-424b-a657-427b3ef4c792/: xl.meta.bkp
rustykey-7814501223823078354/: hosts
setup/: Cargo.toml
setup/src/: main.rs
shared/: Cargo.toml
shared/src/: auth.rs  lib.rs  messages.rs
src/: main.rs
usb_sessions/sda1/30d7c7f7-04fc-426c-ac6c-2f158c01322f/System Volume Information/: IndexerVolumeGuid
worker/: Cargo.toml
worker/src/: main.rs
