[package]
name = "Projet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["full"] }
tokio-udev = "0.9.1"
tokio-stream = "0.1.17"
users = "0.11"
nix = { version = "0.30.1", features = ["sched", "mount", "fs", "user"] }
caps = "0.5.5"
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.141"
walkdir = "2.5.0"
uuid = { version = "1.17.0", features = ["v4"] }
libc = "0.2.174"
tokio-rustls = "0.26.2"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
sha2 = "0.10.9"
bincode = "2.0.1"