[package]
name = "Projet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["full"] }
tokio-udev = "0.9.1"
tokio-stream = "0.1.17"
users = "0.11"
nix = { version = "0.30.1", features = ["sched", "mount", "fs", "user"] }
caps = "0.5.5"
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.141"
walkdir = "2.5.0"
uuid = { version = "1.17.0", features = ["v4"] }
libc = "0.2.174"
sha2 = "0.10.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
aws-sdk-s3 = "1.100.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.4"
aws-smithy-runtime = "1.8.5"
aws-types = "1.3.8"
axum = { version = "0.8.4", features = ["json", "multipart"] }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json", "blocking"] }
axum-server = {version = "0.7.2", features = ["tls-rustls"] }
bytes = "1.10.1"
base64 = "0.22.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "1.0"
urlencoding = "2.1.3"
async-stream = "0.3.6"
rand = "0.9.2"
dashmap = "6.1.0"
