[workspace]
members = ["shared", "agent", "backend", "setup", "worker"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

anyhow = "1.0.99"
thiserror = "2.0.15"

rustls = "0.23.31"
rustls-pemfile ="1.0"

tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.31"

uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"

axum = { version = "0.8.4", features = ["ws", "tokio"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tower = { version = "0.5.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
hyper = "1.7.0"

s3s = { version = "0.11.0", features = ["tower"] } 
s3s-fs = "0.11.0"

nix = { version = "0.30", features = ["mount", "sched", "fs", "user"] }
caps = "0.5.5"

tokio-udev = "0.9.1"
walkdir = "2.5.0"
sha2 = "0.10.9"

reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
async-trait = "0.1.89"
clap = { version = "4.5.45", features = ["derive"] }
