[package]
name = "rustykey-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true, features = ["ws", "tokio"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
tower = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

shared = { path = "../shared" }
